--- a/platform/appBuyerCreate-permissions-default.json
+++ b/platform/appBuyerCreate-permissions-default.json
@@ -9,7 +9,7 @@
 	   { "ignore":0,"required":1,"id":"email","type":"text","label":"Email","customer":"INFO.EMAIL" },
 	   { "ignore":0,"required":1,"id":"firstname","type":"text","label":"Purchasing Contact Firstname","customer":"INFO.firstname" },
 	   { "ignore":0,"required":1,"id":"lastname","type":"text","label":"Purchasing Contact Lastname","customer":"INFO.lastname" },
-	   { "ignore":0,"required":1,"id":password","type":"text","label":"Password","customer":"INFO.password", },
+	   { "ignore":0,"required":1,"id":"password","type":"text","label":"Password","customer":"INFO.password", },
 	   { "type":"submit","label":"Create Account" }
 	]
 }
